[project]
name = "backend-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.1",
    "flask-bcrypt>=1.0.1",
    "flask-jwt-extended[asymetric-crypto,asymmetric-crypto]>=4.7.1",
    "flask-marshmallow>=1.3.0",
    "flask-migrate>=4.1.0",
    "flask-sqlalchemy>=3.1.1",
    "marshmallow-sqlalchemy>=1.4.2",
    "pytest>=8.4.0",
    "pytest-mock>=3.14.1",
]

# pyproject.toml
[tool.pytest.ini_options]
addopts = "-vvv"
testpaths = ["tests"]
pythonpath = ["src"]
